[package]
name = "revparse_derive"
version = "1.0.7"
edition = "2024"
license = "MIT"
keywords = ["argument", "cli", "arg", "parser", "parse"]
categories = ["command-line-interface"]
description = "Dependency of [revparse](https://crates.io/crates/revparse), a fast simple Command Line Argument Parser, with GNU error messages."
repository = "https://github.com/revellan/revparse_derive"
homepage = "https://revparse.revellan.com"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = "2.0.106"
